// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should match with snapshot 1`] = `
<div>
  <div
    class="sc-dkPtRN ktuioq"
    height="256px"
    width="256px"
  >
    A content
  </div>
</div>
`;

exports[`Container should match with snapshot: CustomCardColoredStyledBox 1`] = `
<div>
  <div
    class="sc-dkPtRN sc-hKwDye ekOsNC hkabfB"
  />
</div>
`;

exports[`Container should match with snapshot: CustomCardColoredStyledBox No Position 1`] = `
<div>
  <div
    class="sc-dkPtRN sc-hKwDye ekOsNC rBElr"
  />
</div>
`;

exports[`Container should match with snapshot: MarketplaceCardContainer 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered sc-eCImPb eXMxhc"
    countDown="01:52:09 left 🔥"
    coverImg="https://robohash.org/a8cd9c187bb33c8a8f6e2774d71308fb?set=set4&bgset=&size=400x400"
    enddate="Thu Dec 16 2021"
    menuItems="Option A,Option B,Option c"
    startdate="Sat Jan 01 2022"
  >
    <div
      class="ant-card-cover"
    >
      <div>
        <div
          class="sc-bdvvtL dIxYVf"
        >
          <div
            class="sc-gsDKAQ cOcCgz count-down-text"
            role="count-down-text"
          >
             days,  hours left 🔥
          </div>
          <div
            class="ant-btn-group ant-dropdown-button"
          >
            <button
              class="ant-btn ant-btn-default"
              type="button"
            />
            <button
              class="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
              type="button"
            >
              <span
                aria-label="ellipsis"
                class="anticon anticon-ellipsis"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="ellipsis"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    />
  </div>
</div>
`;

exports[`Container should match with snapshot: MarketplaceCardContainer With Cover 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered sc-eCImPb eXMxhc"
    countDown="01:52:09 left 🔥"
    coverImg="https://robohash.org/a8cd9c187bb33c8a8f6e2774d71308fb?set=set4&bgset=&size=400x400"
    enddate="Thu Dec 16 2021"
    menuItems="Option A,Option B,Option c"
    startdate="Sat Jan 01 2022"
  >
    <div
      class="ant-card-cover"
    >
      <div>
        Hello
      </div>
    </div>
    <div
      class="ant-card-body"
    />
  </div>
</div>
`;

exports[`Container should match with snapshot: MarketplaceCardContainer Without menuItems 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered sc-eCImPb eXMxhc"
    countDown="01:52:09 left 🔥"
    coverImg="https://robohash.org/a8cd9c187bb33c8a8f6e2774d71308fb?set=set4&bgset=&size=400x400"
    enddate="Thu Dec 16 2021"
    startdate="Sat Jan 01 2022"
  >
    <div
      class="ant-card-cover"
    >
      <div>
        Hello
      </div>
    </div>
    <div
      class="ant-card-body"
    />
  </div>
</div>
`;

exports[`Container should match with snapshot: SpacedFlexContainer 1`] = `
<div>
  <div
    class="sc-bdvvtL dIxYVf"
  />
</div>
`;
